# falltergeist

./: .appveyor.yml  .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitignore.bak  .gitlab-ci.yml  .gitmodules  .travis.yml  Animation.cpp  Animation.h  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CrossPlatform.cpp  CrossPlatform.h  Event.cpp  Exception.cpp  Exception.h  Font.cpp  Font.h  Game.cpp  Game.h  InteractiveSurface.cpp  InteractiveSurface.h  Makefile  README.md  ResourceManager.cpp  ResourceManager.h  Screen.cpp  Screen.h  State.cpp  State.h  Surface.cpp  Surface.h  compile.sh  conanfile.txt  doxygen.conf  falltergeist.layout  (+8 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yaml
Engine/: Animation.cpp  Animation.h  CrossPlatform.cpp  Event.cpp  Event.h  Exception.cpp  Font.cpp  Font.h  Game.cpp  Game.h  InteractiveSurface.cpp  InteractiveSurface.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Screen.cpp  State.cpp  Surface.cpp  Surface.h  SurfaceSet.cpp  SurfaceSet.h
Fallout/: AafFileType.cpp  BioFileType.cpp  BioFileType.h  DatFile.cpp  DatFile.h  DatFileItem.cpp  DatFileItem.h  FonFileType.cpp  FrmFileType.cpp  FrmFileType.h  GcdFileType.cpp  LstFileType.cpp  MsgFileType.cpp  MsgFileType.h  PalFileType.cpp  PalFileType.h
States/: MainMenuState.cpp  MainMenuState.h  NewGameState.cpp  NewGameState.h  PlayerEditState.cpp  PlayerEditState.h  SaveMenuState.cpp  SaveMenuState.h  StartState.cpp  StartState.h
UI/: BigCounter.cpp  BigCounter.h  Button.cpp  Button.h  ClickMask.cpp  ClickMask.h  FpsCounter.cpp  FpsCounter.h  HiddenMask.cpp  HiddenMask.h  ImageButton.cpp  ImageButton.h  LeftArrowButton.cpp  LeftArrowButton.h  RedCircleButton.cpp  RedCircleButton.h  RedSmallCircleButton.cpp  RedSmallCircleButton.h  RightArrowButton.cpp  RightArrowButton.h  TextArea.cpp  TextArea.h  TextLabel.cpp  TextLabel.h
cmake/install/: apple.cmake  linux.cmake  windows.cmake
cmake/modules/: FindGLEW.cmake  FindGLM.cmake  FindLIBFALLTERGEIST.cmake  FindLua.cmake  FindSDL.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  PrecompiledHeader.cmake
data/: dialogs.lst  elevators.txt  moviecfgs.lst  movies.ini  movies.lst  subtitles.lst
data/scripts/: main.lua  test.lua
data/shaders/: animation.fp  animation.vp  default.fp  font.fp  lightmap.fp  sprite.fp  sprite_glass.fp  sprite_red.fp  sprite_steam.fp  tilemap.fp  tilemap.vp
docker/: Dockerfile  build.sh  run_build.sh
falltergeist/: CMakeLists.txt  README.md
falltergeist/src/: CrossPlatform.cpp  CrossPlatform.h  Exception.h  Font.h  LocationCamera.cpp  Logger.cpp  Logger.h  ResourceManager.cpp  Settings.cpp  Settings.h  functions.cpp  main.cpp  pchheader.h
libfalltergeist-common-cpp/: CMakeLists.txt  README.md
libfalltergeist-common-cpp/src/: Exception.cpp
libfalltergeist-io-cpp/: CMakeLists.txt  README.md
libfalltergeist-io-cpp/include/falltergeist/io/Aaf/: File.h
libfalltergeist-io-cpp/include/falltergeist/io/Acm/: Decoder.h  File.h  Unpacker.h
libfalltergeist-io-cpp/include/falltergeist/io/Bio/: File.h
libfalltergeist-io-cpp/include/falltergeist/io/Dat/: Item.h  MiscFile.h  Stream.h
libfalltergeist-io-cpp/include/falltergeist/io/Fon/: File.h
libfalltergeist-io-cpp/include/falltergeist/io/Frm/: Direction.h  File.h  Frame.h
libfalltergeist-io-cpp/include/falltergeist/io/Gcd/: File.h
libfalltergeist-io-cpp/include/falltergeist/io/Ini/: File.h  Parser.h  Section.h
libfalltergeist-io-cpp/include/falltergeist/io/Int/: File.h  Procedure.h
libfalltergeist-io-cpp/include/falltergeist/io/Map/: Elevation.h  File.h  Script.h
libfalltergeist-io-cpp/include/falltergeist/io/Msg/: File.h
libfalltergeist-io-cpp/include/falltergeist/io/Mve/: Chunk.h  Opcode.h
libfalltergeist-io-cpp/include/falltergeist/io/Pal/: File.h
libfalltergeist-io-cpp/include/falltergeist/io/Rix/: File.h
libfalltergeist-io-cpp/include/falltergeist/io/Txt/: CSVParser.h
libfalltergeist-io-cpp/src/Aaf/: File.cpp  Glyph.cpp
libfalltergeist-io-cpp/src/Acm/: Decoder.cpp  File.cpp  Unpacker.cpp
libfalltergeist-io-cpp/src/Bio/: File.cpp
libfalltergeist-io-cpp/src/Dat/: Entry.cpp  File.cpp  Item.cpp  MiscFile.cpp  Stream.cpp
libfalltergeist-io-cpp/src/Fon/: File.cpp  Glyph.cpp
libfalltergeist-io-cpp/src/Frm/: Direction.cpp  File.cpp  Frame.cpp
libfalltergeist-io-cpp/src/Gam/: File.cpp
libfalltergeist-io-cpp/src/Gcd/: File.cpp
libfalltergeist-io-cpp/src/Ini/: File.cpp  Parser.cpp  Section.cpp  Value.cpp
libfalltergeist-io-cpp/src/Int/: File.cpp  Procedure.cpp
libfalltergeist-io-cpp/src/Lip/: File.cpp
libfalltergeist-io-cpp/src/Lst/: File.cpp
libfalltergeist-io-cpp/src/Map/: Elevation.cpp  File.cpp  Object.cpp  Script.cpp
libfalltergeist-io-cpp/src/Msg/: File.cpp  Message.cpp
libfalltergeist-io-cpp/src/Mve/: Chunk.cpp  File.cpp  Opcode.cpp
libfalltergeist-io-cpp/src/Pal/: Color.cpp  File.cpp
libfalltergeist-io-cpp/src/Pro/: File.cpp
libfalltergeist-io-cpp/src/Rix/: File.cpp
libfalltergeist-io-cpp/src/Sve/: File.cpp
libfalltergeist-io-cpp/src/Txt/: CSVBasedFile.cpp  CSVParser.cpp  CityFile.cpp  Lexer.cpp  MapsFile.cpp  Parser.cpp  WorldmapFile.cpp
nbproject/: project.xml
package/: android.sh.in  falltergeist.desktop  osx.sh  osx.sh.in
package/android/: AndroidManifest.xml  default.properties  sdl.patch
package/osx/: Info.plist  Info.plist.in
scripts/: main.lua
scripts/ui/: button.lua
snap/: falltergeist.launcher  snapcraft.yaml
src/: CrossPlatform.cpp  CrossPlatform.cpp.in  CrossPlatform.h  Exception.cpp  Exception.h  Font.cpp  Font.h  FontString.cpp  FontString.h  Game.cpp  Game.h  GameTime.cpp  GameTime.h  ILogger.h  LocationCamera.cpp  LocationCamera.h  Logger.cpp  Logger.h  Point.cpp  Point.h  ResourceManager.cpp  ResourceManager.h  Settings.cpp  Settings.h  State.cpp  State.h  TransFlags.h  Version.h.in  functions.cpp  functions.h
src/Audio/: AcmSound.cpp  AcmSound.h  AudioMixer.cpp  AudioMixer.h  IMixer.h  ISound.h  Mixer.cpp  Mixer.h  MveSound.cpp  MveSound.h  SdlMixer.h  (+1 more)
travis/: linux.install.sh  osx.install.sh
(+2522 files in other folders)
